:construction: Add viewing highscores

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -40,7 +40,7 @@
                 <p>Your final score is <span id="score"></span>.</p>
                 <div>Enter initials: 
                     <input type="text" name="initials" id="initials">
-                    <button class='cta-btn'>Submit</button>
+                    <button class='cta-btn' id='all-done-submit'>Submit</button>
                 </div>
             </div>
         </div>
