:construction: Add Timer

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -14,7 +14,7 @@
     <header>
         <a id=leaderboard>View Highscores <i class="fas fa-hand-point-left fa-lg"></i>
         </i></a> 
-        <h3>Time: </h3>
+        <h3 id="timer">Time: <span id="timer-text"></span></h3>
     </header>
     <main>
         <div class="card">
